--- a/en/昴/昴.16989.wikitext
+++ b/en/昴/昴.16989.wikitext
@@ -31,7 +31,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# the [[Pleiades]] {{gloss|star cluster}}
+# the [[Pleiades]] {{gloss|[[star cluster]]}}
 
 ====Compounds====
 {{zh-der|昴降}}
@@ -51,14 +51,19 @@
 {{ja-readings
 |goon=みょう<めう
 |kanon=ぼう<ばう
-|kun=すばる-
-|nanori=すまる, たかし, のぼる
+|kun=すばる-, すまる-
+|nanori=たかし, のぼる
 }}
 
 ===Etymology 1===
+<div style="float:right;">
+{{wp|lang=ja|プレアデス星団}}
+{{wp|Pleaides}}
+</div>
 {{ja-kanjitab|yomi=k|すばる}}
+Likely from {{inh|ja|ojp|sort=すばる|-}}, use of kanji in Japanese texts first appears in the ''{{w|ja:丹後国風土記|Tangō-no-kuni Fudoki}}'' (''c.'' mid-8th century), phonetic spelling first attested in the ''{{w|Wamyō Ruijushō}}'' (938 {{CE}}).
 
-By extension from {{m|ja|統ばる||to bunch together; to unite|tr=subaru}}, due to the way the stars in the constellation all cluster together.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR">{{R:Daijirin}}</ref>
+By extension from {{m|ja|統ばる|tr=subaru||to [[bunch]] together; to [[unite]]|pos=intransitive}}, due to the way the [[star]]s in the [[constellation]] all ''[[cluster]]'' together.<ref name="KDJ">{{R:Kokugo Dai Jiten}}</ref><ref name="DJR"/>. Compare {{m|ja|統べる|tr=suberu||to [[command]]|pos=transitive}}.
 
 ====Pronunciation====
 {{ja-pron|yomi=k|すばる|acc=1|acc_ref=DJR}}
@@ -66,19 +71,52 @@ By extension from {{m|ja|統ばる||to bunch together; to unite|tr=subaru}}, due
 ====Proper noun====
 {{ja-pos|proper|すばる}}
 
-# the [[Pleiades]] (star cluster)
+# the [[Pleiades]] [[star cluster]], one of the {{w|Twenty-Eight Mansions}}
+#: {{synonyms|ja|プレアデス星団|tr=Pureadesu-seidan|昴宿|tr2=Bō-shuku|昴星|tr3=Subaruboshi, Bōsei|六連星|tr4=Mutsuraboshi}}
+# {{given name|female|lang=ja|A=a|nodot=1|sort=すばる}}
 
 ===Etymology 2===
-Character borrowed for its meaning. See [[熟字訓]] (''jukujikun'') for details.
+{{ja-kanjitab|yomi=k|すまる}}
+Likely from {{inh|ja|ojp|-}}.
+
+Possibly an allusion from {{m|ja||tr=sumaru no tama||lit=[[cluster]] of [[pearl]]s}} referenced multiple times in the ''{{w|Kojiki}}'' (712 {{CE}}); probably the original form of ''Subaru'' above. {{rfv-etymology|ja}} Compare the development of {{m|ja|皇|tr=<i>sume-</i>/<i>sumera-</i> → <i>sube-</i>/<i>subera-</i>|pos=prefix of praise and respect to Shinto deities or an Emperor of Japan}}
 
 ====Proper noun====
 {{ja-pos|proper|すまる}}
 
+# {{lb|ja|regional|sort=すまる}} the [[Pleiades]] [[star cluster]], one of the {{w|Twenty-Eight Mansions}}
+# {{given name|male|lang=ja|A=a|nodot=1|sort=すまる}}
+
+===Etymology 3===
+<div style="float:right;">
+{{wp|lang=ja|昴宿}}
+{{wp|Hairy Head}}
+</div>
+{{ja-kanjitab|yomi=k|ぼう}}
+{{IPAchar|/bau/}} → {{IPAchar|/bɔː/}} → {{IPAchar|/boː/}}
+
+From {{bor|ja|ltc|sort=ほう|-}} {{ltc-l|昴}}.
+
+====Pronunciation====
+{{ja-pron|y=ko|ぼう|acc=1|acc_ref=DJR}}
+
+====Proper noun====
+{{ja-pos|proper|ぼう|hhira=ばう}}
+
+# {{lb|ja|Chinese astronomy|sort=ほう}} the {{w|Hairy Head}} [[constellation]], one of the {{w|Twenty-Eight Mansions}}, corresponds to the [[Pleiades]] in English
+#: {{synonyms|ja|昴宿|tr=Bō-shuku|昴星|tr2=Bōsei}}
+
+===Etymology 4===
+Various nanori readings.
+
+====Proper noun====
 {{ja-pos|proper|たかし}}
+
+# {{given name|male|lang=ja|A=a|nodot=1|sort=たかし}}
 
 {{ja-pos|proper|のぼる}}
 
-# a masculine given name
+# {{given name|male|lang=ja|A=a|nodot=1|sort=のぼる}}
 
 ===References===
 <references/>
