--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -98,13 +98,13 @@ From {{etyl|ojp|ja|sort=むかし}}. The ''muka'' portion derives from the {{m|j
 # the [[past]], [[old]] times
 #* {{RQ:Utsubo Monogatari|Toshikage}}<ref>{{R:Utsubo Monogatari 1}}</ref>
 #*: '''むかし'''、式部大輔、左大弁かけて清原の王ありけり。
-#: 昔と[[今]] — past and the present
-#: 昔の[[自分]] — my past self
-#: 昔からの[[友達]] — a [[longtime]] friend ("a friend since old times")
-#: 昔に[[戻る]] — to return to the past
+#: {{ja-usex-inline|'''昔'''と[[今]]|'''むかし''' と いま|past and the present}}
+#: {{ja-usex-inline|'''昔'''の[[自分]]|'''むかし''' の じぶん|my past self}}
+#: {{ja-usex-inline|'''昔'''からの[[友達]]|'''むかし''' から の ともだち|a [[longtime]] friend|lit=a friend since old times}}
+#: {{ja-usex-inline|'''昔'''に[[戻る]]|'''むかし''' に もどる|to return to the past}}
 # [[ancient]]
-#: 昔の[[人]] — ancient people
-#: もう昔の[[話]]だ。— That's [[ancient history]].
+#: {{ja-usex-inline|'''昔'''の[[人]]|'''むかし''' の ひと|ancient people}}
+#: {{ja-usex-inline|もう'''昔'''の[[話]]だ。|もう '''むかし''' の はなし だ。|That's [[ancient history]].}}
 
 ===References===
 <references/>
