--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -54,7 +54,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * Arabic: {{t|ar|لَحْم|m}}
 *: Egyptian Arabic: {{t|arz|لحم|m|tr=laḥm|sc=Arab}}
 * Armenian: {{t+|hy|միս}}
-* Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
+* Bulgarian: {{t+|bg|месо́|n|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
