--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -55,7 +55,7 @@ Possible cognate found in {{cog|hmx-pro|*ntsi̯ouˣ||early}}, whence {{cog|mww|n
 #* {{zh-x|這 個 變壓器 已經 燒 毀 了，早 該 拆 換 一 個 新 的 了。|This transformer has burnt out. It should have been replaced a long time ago.}}
 # (early) [[morning]]
 #* {{zh-x|我 今 早 沒 有 見到 他。|I didn't see him this '''morning'''.}}
-# [[good morning]]
+# [[good morning]], a contraction for [[早上好]]
 # [[before]]; in the [[past]] time
 #* {{zh-x|現在 這麼 匆忙，你 早 幹{gàn}嗎{má} 去 了。|So now you are in a hurry. What were you doing before?}}
 
