--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -12,7 +12,7 @@
 
 ==Chinese==
 {{zh-forms}}
-[[File:Stop sign China.svg|thumb]]
+[[File:Stop sign China.svg|thumb|100px]]
 
 ===Glyph origin===
 {{Han etym}}
