--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -20,10 +20,10 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 
 ====Usage notes====
 * Unlike "[[etc.]]", "e.g." is very seldom read as a full Latin phrase. Like "[[i.e.]]", it is typically read out as its English [[calque]] ("[[for example]]") or as its letters ("E-G"). It is also sometimes taught or glossed as "example given" for the benefit of English speakers.
-* "E.g." and its examples are typically set off from the rest of the sentence by punctuation. In US English, "e.g." is typically followed by a comma, while the comma is often omitted in British English.
-:: {{a|UK}} ''I like sweet foods, e.g. [[danish]]es.''
-:: {{a|US}} ''I like sweet foods (e.g., [[marzipan]]) but brush regularly.''
-:: {{a|US}} ''I like sweet foods — e.g., [[red bean|red-bean]] [[zongzi]] — and so prefer [[Shanghainese]] cuisine to, e.g., [[Cantonese]].''
+* "E.g." and its examples are typically set off from the rest of the sentence by punctuation. In US English, "e.g." sometimes will be followed by a comma. However, usually it is not, and it is never followed by a comma in the rest of the world.
+:: {{a|UK|US}} ''I like sweet foods, e.g. [[danish]]es.''
+:: {{a|rare|US}} ''I like sweet foods (e.g., [[marzipan]]) but brush regularly.''
+:: {{a|rare|US}} ''I like sweet foods — e.g., [[red bean|red-bean]] [[zongzi]] — and so prefer [[Shanghainese]] cuisine to, e.g., [[Cantonese]].''
 * The example(s) following "e.g." should be illustrative, ''not'' exhaustive.<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', {{ISBN|9781567922035}}.</ref> An exhaustive list or rephrasing uses "[[i.e.]]" instead. Since a concluding ''[[et cetera]]'' makes a list exhaustive, "[[etc.]]" should never be used with "e.g."
 
 ====Translations====
