--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -43,6 +43,7 @@ From {{der|en|ang|port}}, from {{der|en|la|portus||port, harbour}}, ultimately f
 |Lockport
 |Newport
 |outport
+|Port Allen
 |Port Angeles
 |Port Clinton
 |Port Erin
