--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -75,6 +75,7 @@ From {{etyl|fro|en}} {{m|fro|founder}} (Modern French: {{m|fr|fonder}}), from {{
 * Catalan: {{t+|ca|fundar}}
 * Czech: {{t+|cs|založit}}
 * Danish: {{t+|da|grundlægge}}
+* Finnish: {{t+|fi|perustaa}}
 * French: {{t+|fr|fonder}}
 * Georgian: {{t|ka|საფუძვლის ჩაყრა}}, {{t|ka|დაფუძვნება}}
 * German: {{t+|de|errichten}}, {{t+|de|gründen}}
@@ -82,8 +83,8 @@ From {{etyl|fro|en}} {{m|fro|founder}} (Modern French: {{m|fr|fonder}}), from {{
 * Italian: {{t+|it|fondare}}
 * Japanese: {{t+|ja|基礎|alt=基礎を築く|tr=kiso wo kizuku}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
-* Korean: {{t-needed|ko}}
 {{trans-mid}}
+* Korean: {{t-needed|ko}}
 * Ngazidja Comorian: {{t|zdj|tsenga|alt=utsenga}}
 * Norwegian: {{t|no|grunnlegge}}
 * Old English: {{t|ang|astemnian}}, {{t|ang|gegrundweallian}}
