--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -18,7 +18,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 # {{senseid|en|person keeping records and handling clerical work}}A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
 # {{senseid|en|head of a department of government}}{{lb|en|often|capitalized}} The [[head]] of a [[department]] of [[government]].
 # {{senseid|en|leading or managerial position in certain organizations}}A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
-#: ''Ban Ki-Moon is the current '''secretary''' general of the United Nations.''
+#: ''Ban Ki-Moon was a '''secretary''' general of the United Nations.''
 # {{senseid|en|type of desk}}{{lb|en|US}} A type of [[desk]], [[secretary desk]]; a [[secretaire]].
 # {{senseid|en|sagittarius serpentarius}}A [[secretary bird]], a [[bird]] of the species ''[[Sagittarius serpentarius]]''.
 
