--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -118,7 +118,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Italian: {{t+|it|succhiare}}, {{t|it|suggere}}, {{t|it|ciucciare}}
 * Japanese: {{t+|ja|吸う|tr=すう, suu}}, {{t|ja|しゃぶる|tr=shaburu}}
 * Karakhanid: {{t|xqa|اَمّاكْ|tr=emmēk}}
-* Khmer: {{t+|km|ជប់|tr=cup|sc=Khmr}}, {{t+|km|ក្រេប|tr=kreep|sc=Khmr}}
+* Khmer: {{t+|km|ជប់|tr=cup|sc=Khmr}}, {{t+|km|ក្រេប|tr=kreep|sc=Khmr}}, {{t+|km|ជញ្ជក់}}
 * Korean: {{t+|ko|빨다}}
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{t+|ku|مژین|sc=ku-Arab}}
 * Lao: {{t-needed|lo}}
