--- a/en/慖/慖.15722.wikitext
+++ b/en/慖/慖.15722.wikitext
@@ -25,5 +25,9 @@
 |cat=
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
