--- a/en/慐/慐.15716.wikitext
+++ b/en/慐/慐.15716.wikitext
@@ -22,5 +22,9 @@
 |cat=
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 ====References====
 * [http://www.cns11643.gov.tw/AIDB/query_general_view.do?page=3&code=647A Chinese National Standards (Master Ideographs Seeker for CNS 11643)]
