--- a/en/慀/慀.15699.wikitext
+++ b/en/慀/慀.15699.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=13|four=92034|canj=PBVK|ids=⿰忄奚}}
 
-# {{rfdef|lang=cmn}}
-
 ====References====
 * {{Han ref|kx=0397.100|dkj=11034|dj=0736.060|hdz=42338.010|uh=6140|ud=24896|bh=DD71|bd=56689}}
 
@@ -27,5 +25,9 @@
 |cat=
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
