--- a/en/愸/愸.15691.wikitext
+++ b/en/愸/愸.15691.wikitext
@@ -22,5 +22,9 @@
 |cat=
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
