--- a/en/愭/愭.15680.wikitext
+++ b/en/愭/愭.15680.wikitext
@@ -26,6 +26,10 @@
 |cat=a,v
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
