--- a/en/愑/愑.15653.wikitext
+++ b/en/愑/愑.15653.wikitext
@@ -22,6 +22,11 @@
 |cat=
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
 
