--- a/en/愋/愋.15647.wikitext
+++ b/en/愋/愋.15647.wikitext
@@ -32,5 +32,10 @@
 |cat=a,v
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
