--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -5,10 +5,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=40117|canj=GYHN|ids=⿰土亢}}
 
-# [[pit]], [[hole]]
-# [[bury]], [[trap]]
-# [[harry]]
-
 ====References====
 * {{Han ref|kx=0226.010|dkj=04932|dj=0460.080|hdz=10426.090|uh=5751|ud=22353|bh=A77C|bd=42876}}
 
@@ -29,13 +25,16 @@
 |w=
 |mc=y
 |oc=y
-|cat=
+|cat=n,v,adj
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# [[pit]], [[hole]]
+# [[tunnel]]
+# to [[bury]] [[alive]]
+<!-- # {{rfdef|zh}} (adjective) -->
 
 ====Compounds====
 {{zh-der|坑道|坑害|坑井|坑坑坎坎|坑蒙|坑蒙拐騙|坑木|坑騙|坑人|坑洼|坑子|屎坑|陷坑|饢坑}}
