--- a/en/坨/坨.13035.wikitext
+++ b/en/坨/坨.13035.wikitext
@@ -12,13 +12,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=to4|y=to4}}
+===Pronunciation===
+{{zh-pron
+|m=tuó
+|c=to4
+|cat=
+}}
 
-# a [[lump]], [[heap]]
-# [[spherical]] [[object]]
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===Compounds===
+{{su#bst:zh-der/new|p=tuó}}
 
 ----
 
@@ -40,16 +50,6 @@
 {{ko-hanja|hangeul=이|rv=i|mr=i}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tuó]] ([[tuo2]])|wg=t'o<sup>2</sup>}}
-
-# a [[lump]], [[heap]]
-# [[spherical]] [[object]]
 
 ----
 
