--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -47,7 +47,7 @@
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=心09|hanviet=lăng}}
+{{vi-hantu|rs=心09|[[lăng]]}}
 
 # {{defn|lang=vi|sort=心09}}
 
