--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -52,7 +52,7 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 
 # [[earth]]; [[ground]]
 #* {{zh-x|這 匹 馬 倒 在 地上{shang}。|The horse collapsed to the '''ground'''.}}
-# [[land]]; [[field]]
+# [[land]]; [[field]] {{zh-mw|c:塊|c:笪}}
 #* {{zh-x|呢{nei1} 塊 地|this plot of '''land'''|C}}
 # [[distance]]; [[separation]]
 #* {{zh-x|車站 離 這 三 里 地。|The bus stop is three miles away.}}
