--- a/en/愠/愠.15667.wikitext
+++ b/en/愠/愠.15667.wikitext
@@ -16,13 +16,15 @@
 ==Chinese==
 
 ===Glyph origin===
-{{Han simp|慍|f=𥁕|t=昷}}.
+An unorthodox variant {{Han simp|慍|f=𥁕|t=昷|nocap=y}} which can be found in the historical {{w|Longkan Shoujian}} ({{w2|zh|龍龕手鑑}}) dictionary compiled in 997 AD.
+
+Eventually adopted as an official form by the People's Republic of China in 1965 based on the {{w|Xin Zixing}} ({{w2|zh|新字形}}) standardized form of characters.
 
 ===Definitions===
 {{zh-see|慍|svt}}
 
 ===Usage notes===
-This character is the preferred form used in Hong Kong. <!-- Refer HKSCS 2016 and http://input.foruto.com/ccc/gongbiu/dzijingbiu/ -->
+This character is also the preferred form used in Hong Kong, where traditional Chinese is used. <!-- Refer HKSCS 2016 (Table 2) and http://input.foruto.com/ccc/gongbiu/dzijingbiu/ -->
 
 ----
 
