--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 {{checksense|en}}
 * To [[draw]]
 * To [[attract]]
-* (7, 8 above) To [[blow]]
+* (7 above) To [[blow]]
 * See also [[Thesaurus:give head]]
 
 ====Antonyms====
