--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -104,7 +104,7 @@
 * Punjabi: {{t|pa|ਸੰਯੁਕਤ ਬਾਦਸ਼ਾਹੀ|sc=Guru}}
 * Quechua: {{t|qu|Hukllachasqa Qhapaq Suyu}}
 * Romanian: {{t|ro|Regatul Unit al Marii Britanii și Irlandei de Nord|n}}, {{t+|ro|Regatul Unit|n}}
-* Russian: {{t+|ru|Соединённое Короле́вство|n}}, {{t+|ru|Соединённое Короле́вство Великобрита́нии и Се́верной Ирла́ндии|n}}
+* Russian: {{t+|ru|Великобрита́ния}}, {{t+|ru|Соединённое Короле́вство|n}}, {{t+|ru|Соединённое Короле́вство Великобрита́нии и Се́верной Ирла́ндии|n}}
 * Rusyn: {{t|rue|Велика Брітанія|n}}, {{t|rue|Споєне кралёвство Великой Брітанії і Северного Ірьска|n}}
 * Samoan: {{t|sm|Iunaite Malo}}
 * Scots: {{t|sco|Unitit Kinrick}}, {{t|sco|Unitit Kinrick o Greet Britain an Norlin Airlann}}
