--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -55,13 +55,15 @@
 }}
 
 ====Compounds====
-* [[傑作]]
-* [[傑士]]
-* [[傑出]]
-* [[傑物]]
-* [[英傑]]
-* [[快傑]]
-* [[豪傑]]
+* {{ja-r|傑作|けっさく}}
+* {{ja-r|傑士|けっし}}
+* {{ja-r|傑出|けっしゅつ}}
+* {{ja-r|傑物|けつぶつ}}
+* {{ja-r|英傑|えいけつ}}
+* {{ja-r|怪傑|かいけつ}}
+* {{ja-r|快傑|かいけつ}}
+* {{ja-r|豪傑|ごうけつ}}
+* {{ja-r|奇傑|きけつ}}
 
 ===Proper noun===
 {{ja-pos|proper|すぐる}}
