--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -4,8 +4,11 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=23227|canj=OHSB,OISB|ids=⿰亻扁}}
 
+====Derived characters====
+* {{l|mul|[[𫣪]], [[𪝹]], [[𫤑]], [[𫣱]]}}
+
 ====References====
-* {{Han ref|kx=0110.160|dkj=00848|dj=0235.100|hdz=10195.100|uh=504F|ud=20559|bh=B0BE|bd=45246}}
+{{Han ref|kx=0110.160|dkj=00848|dj=0235.100|hdz=10195.100|uh=504F}}
 
 ----
 
