--- a/en/垙/垙.13085.wikitext
+++ b/en/垙/垙.13085.wikitext
@@ -9,12 +9,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gwong1]], [[gong1]]|y=gwong1, gong1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=土06}}
+===Pronunciation===
+{{zh-pron
+|m=guāng
+|c=gwong1,gong1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
@@ -29,13 +42,4 @@
 # {{defn|lang=ja|sort=土06}}
 
 ====Readings====
-* {{ja-readings|on=[[くう]] (kū)|kun=[[ちまた]] (chimata)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[guāng]] ([[guang1]])|wg=kuang<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
+{{ja-readings|on=[[くう]] (kū)|kun=[[ちまた]] (chimata)}}
