--- a/en/圻/圻.12990.wikitext
+++ b/en/圻/圻.12990.wikitext
@@ -43,7 +43,8 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[border]], [[boundary]]
+# {{surname|lang=zh}}
 
 ===Compounds===
 {{zh-der|中圻|八圻|封圻}}
