--- a/en/坕/坕.13016.wikitext
+++ b/en/坕/坕.13016.wikitext
@@ -15,22 +15,10 @@
 ===Pronunciation===
 {{zh-pron
 |m=jīng
-|m-s=
-|dg=
 |c=ging1
-|c-t=
-|g=
-|h=pfs=
-|j=
-|mb=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
 |mc=y
 |oc=y
-|cat=n
+|cat=
 }}
 
 ===Definitions===
@@ -40,5 +28,3 @@
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
-----
