--- a/en/坕/坕.13016.wikitext
+++ b/en/坕/坕.13016.wikitext
@@ -10,21 +10,4 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
-
-===Pronunciation===
-{{zh-pron
-|m=jīng
-|c=ging1
-|mc=y
-|oc=y
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|lang=zh}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+{{zh-see|經|a}}
