--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -102,6 +102,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Norwegian:
 *: Bokmål: {{t+|nb|skilpadde|m|f}}, {{t|nb|landskilpadde|m|f}}
 *: Nynorsk: {{t|nn|skjelpadde|f}}, {{t|nn|landskjelpadde|f}}
+* Old English: {{qualifier|tortoise or turtle}} {{t|ang|byrdling|m}}, {{t|ang|landbyrdling|m}}
 * Pali: {{t|pi|kacchapa|m}}
 * Pashto: {{t+|ps|کيشپ|m|tr=kišáp}} {{qualifier|tortoise or turtle}}
 * Persian: {{qualifier|tortoise or turtle}} {{t+|fa|لاک‌پشت|tr=lâk-pošt|sc=fa-Arab}}, {{t+|fa|باخه|tr=bâxe|sc=fa-Arab}}
