--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=9|rad=人|as=10|sn=12|four=25294|canj=ONQD|ids=⿰亻桀}}
+{{Han char|rn=9|rad=人|as=10|asj=11|sn=12|snj=13|four=25294|canj=ONQD|ids=⿰亻桀}}
 
 ====References====
 * {{Han ref|kx=0113.090|dkj=00955|dj=0240.150|hdz=10204.050|uh=5091|ud=20625|bh=B3C7|bd=46023}}
