--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -4,7 +4,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=71|rad=无|as=05|sn=9|four=71714|canj=AIMVU|ids=⿰皀旡}}
+{{Han char|rn=71|rad=无|as=05|sn=9|snj=10|four=71714|canj=AIMVU|ids=⿰皀旡}}
 
 ====References====
 * {{Han ref|kx=0485.310|dkj=13721|dj=0848.030|hdz=21148.010|uh=65E2|ud=26082|bh=AC4A|bd=44106}}
