--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -43,7 +43,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# an occurrence bringing prosperity or wealth
 
 ====Compounds====
 {{zh-der|健旺|南旺|喜氣旺色|持旺|暢旺|旺盛|打旺壯|旺月|旺銷|旺季|旺相|肝火旺|趙旺|興旺|見旺|陰虛火旺|脈旺}}
