--- a/en/旻/旻.16931.wikitext
+++ b/en/旻/旻.16931.wikitext
@@ -11,12 +11,25 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[man4]]|y=man4}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=mín
+|c=man4
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ----
 
@@ -28,32 +41,26 @@
 # the autumn sky
 
 ====Readings====
-* {{ja-readings|on=[[びん]] (bin), [[みん]] (min)|kun=[[あきら]] (akira) [[あきぞら]] (akizora)}}
+{{ja-readings
+|goon=みん
+|kanon=びん
+|kun=[[あきら]] (akira) [[あきぞら]] (akizora)}}
 
 ----
 
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=민|eumhun=|rv=min|mr=min|y=min}}
+{{ko-hanja|hangeul=민|eumhun=}}
 
 # {{defn|lang=ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[mín]] ([[min2]])|wg=min<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
 
 ----
 
 ==Vietnamese==
 
 ===Han character===
-{{vi-readings|rs=日04|hanviet=mân}}
+{{vi-hantu|rs=日04|mân}}
 
 # {{defn|lang=vi|sort=日04}}
 
