--- a/en/м/масленица.11176.wikitext
+++ b/en/м/масленица.11176.wikitext
@@ -12,7 +12,7 @@ From {{inh|ru|sla-pro|*maslěnica}}, from {{affix|sla-pro|*maslěnъjь|*-ica|no
 ===Noun===
 {{ru-noun+|ма́сленица}}
 
-# {{alternative case form of|lang=ru|Ма́сленица}}; [[Maslenitsa]], [[Shrovetide]], Butter Week, Crepe Week {{gloss|the week before Lent, seven weeks before Easter; originally a pre-Christian Slavic festival}}
+# {{alternative case form of|lang=ru|Ма́сленица}}; [[Maslenitsa]], [[Shrovetide]], Butter Week, Crepe Week {{gloss|the week before Lent, seven weeks before Easter}}
 # {{lb|ru|figuratively}} [[feast]], [[high life]]
 #: {{uxi|ru|не [[житьё]], а масленица|a [[bed of roses]]; living [[high on the hog]]}}
 #: {{uxi|ru|не всё коту масленица, придёт и [[великий пост]]|good things don’t last forever (after dinner comes the reckoning)}}
