--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -21,7 +21,7 @@ See {{m|en|spell}}.
 From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en|osx|spelta||spelt}}; or from {{der|en|LL.|spelta||spelt}}, from {{der|en|frk|*spelta||spelt}}; all from {{der|en|gem-pro|*spiltō}}, {{m|gem-pro|*spiltaz||spelt}}, from {{der|en|ine-pro|*(s)pelbʰ-}}, {{m|ine-pro|*(s)pelbʰ-t-||spelt, spelt meal}}. Cognate with {{cog|de|Spelz}} and {{cog|nl|spelt}}.
 
 ====Noun====
-{{en-noun|-}}
+{{en-noun|-|s}}
 
 # {{senseid|en|Q158767}} A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}} or {{m|mul|Triticum dicoccon}}.
 
