--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -47,6 +47,9 @@
 # {{lb|zh|Taishanese}} to be [[scared]]
 #: {{zh-x|慄 到 唔敢 喐|to be so scared one won't dare move|C-T}}
 
+===Compounds===
+{{zh-der|不寒而慄|凜慄|寒慄|慄慄危懼|慘慄|慄慄|慄冽|惴慄|惕慄|惏慄|悸慄|悚慄|恂慄|慄然|汗洽股慄|栗慄|懰慄|戰慄|戰戰慄慄|陸讋水慄|齋慄|震慄|股慄|顫慄}}
+
 ----
 
 ==Japanese==
