--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -124,7 +124,7 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 * Ukrainian: {{t+|uk|пальто́|n|sc=Cyrl}}, {{t|uk|піджа́к|sc=Cyrl}} {{qualifier|jacket}}
 * Uyghur: {{t|ug|پەلتو}}
 * Uzbek: {{t|uz|palʼto}}
-* Vietnamese: {{t|vi|áo bành tô}}
+* Vietnamese: {{t|vi|áo bành tô}}, {{t|vi|áo khoác}}
 * Volapük: {{t-needed|vo}}
 * Welsh: {{t|cy|côt|f}}
 * Winnebago: {{t|win|woonąžįxete}}
