--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -4,8 +4,11 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=8|four=60281|canj=AMO|ids=⿱日仄}}
 
+====Derived characters====
+* {{l|mul|[[𦝈]]}}
+
 ====References====
-* {{Han ref|kx=0490.350|dkj=13785|dj=0852.020|hdz=21489.030|uh=6603|ud=26115|bh=CCCA|bd=52426}}
+{{Han ref|kx=0490.350|dkj=13785|dj=0852.020|hdz=21489.030|uh=6603}}
 
 ----
 
