--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -215,7 +215,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Finnish: {{t+|fi|luumu}}
 * French: {{t+|fr|prune|f}}
 * Friulian: {{t|fur|ciespe|f}}, {{t|fur|emul}}, {{t|fur|bromb|m}}, {{t|fur|brugnul|m}}, {{t|fur|siespe|f}}
-* Galician: {{t+|gl|fatón|m}}, {{t+|gl|ameixa|f}}, {{t+|gl|buíña|f}}, {{t+|gl|ambruíña|f}}, {{t+|gl|gruño|m}}, {{t+|gl|cerollo|m}}, {{t+|gl|eixola|f}}, {{t+|gl|níxaro|m}}
+* Galician: {{t+|gl|fatón|m}}, {{t+|gl|ameixa|f}}, {{t+|gl|buíña|f}}, {{t+|gl|ambruíña|f}}, {{t+|gl|gruño|m}}, {{t+|gl|agruño|m}}, {{t+|gl|cerollo|m}}, {{t+|gl|eixola|f}}, {{t+|gl|níxaro|m}}
 * Georgian: {{t|ka|ქლიავი}}
 * German: {{t+|de|Pflaume|f}}, {{t+|de|Zwetschge|f}}
 *: Alemannic German: {{t|gsw|Flûme|f}}
@@ -317,7 +317,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 * Finnish: {{t+|fi|luumupuu}}
 * French: {{t+|fr|prunier|m}}
 * Friulian: {{t|fur|emolâr}}, {{t|fur|sespâr|m}}, {{t|fur|cespâr|m}}, {{t|fur|brugnulâr|m}}
-* Galician: {{t+|gl|ameixeira|f}}, {{t+|gl|fatoeiro|m}}, {{t+|gl|abruñeiro|m}}, {{t+|gl|gruñeiro|m}}, {{t+|gl|cerolleiro|m}}
+* Galician: {{t+|gl|ameixeira|f}}, {{t+|gl|fatoeiro|m}}, {{t+|gl|abruñeiro|m}}, {{t+|gl|gruñeiro|m}}, {{t+|gl|agruñeiro|m}}, {{t+|gl|cerolleiro|m}}
 * German: {{t+|de|Pflaumenbaum|m}}
 * Greek: {{t+|el|δαμασκηνιά|f}}
 * Hungarian: {{t+|hu|szilvafa}}
@@ -405,7 +405,6 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 {{trans-bottom}}
 
 {{checktrans-top}}
-* Galician: {{t+check|gl|ameixeira|f}} (1), {{t+check|gl|ameixa|f}} (2)
 * Latin: {{t-check|la|prunum|n}}
 * Lithuanian: {{t+check|lt|slyva|f}} (1, 2), {{t-check|lt|slyvinis|m}} (3)
 * Norwegian: {{t+check|no|plomme}}
