--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -69,6 +69,7 @@ From {{etyl|enm|en}} {{m|enm|crepen}}, from {{etyl|ang|en}} {{m|ang|crēopan||to
 * Maori: {{t|mi|toropā}} {{qualifier|refers to plants}}
 * Portuguese: {{t+|pt|trepar}}
 * Russian: {{t+|ru|стели́ться|impf}}
+* Spanish: {{t+|es|reptar}}
 * Swedish: {{t|sv|klänga}}
 {{trans-bottom}}
 
