--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -296,6 +296,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Japanese: {{t+|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t+|ja|腹|tr=はら, hara|sc=Jpan}}
 * Kalenjin: {{t|kln|moek}}
 * Kalmyk: {{t|xal|гесн}}
+* Kapampangan: {{t|pam|atyan}}, {{t|pam|atian}}
 * Kazakh: {{t+|kk|қарын|sc=Cyrl}}, {{t|kk|іш}}
 * Khmer: {{t|km|ក្បាលពោះ|tr=kbaal pʊəh|sc=Khmr}}
 * Kikuyu: {{t|ki|nda}}
