--- a/en/想/想.15624.wikitext
+++ b/en/想/想.15624.wikitext
@@ -55,6 +55,7 @@ From {{och-l|相|to observe; appearance}} (“appearance > to visualise > to thi
 #: {{zh-x|還 想 喝 一 杯 嗎？|Would you '''like''' another drink?}}
 #: {{zh-x|她 想 當 芭蕾舞 演員。|She '''wants''' to be a ballet dancer.}}
 #: {{zh-x|我 很 想 睡。|I'm really sleepy (''lit.'' I really '''want''' to sleep.)}}
+#: {{zh-x|睇 到 唔 想 睇|watched so much that one doesn't want to watch any more|C}}
 # to [[miss]] {{gloss|to feel the absence of someone or something}}
 #: {{zh-x|你 走 了 我 會 想 你 的。|I'll '''miss''' you when you're gone.}}
 
