--- a/en/倭/倭.11052.wikitext
+++ b/en/倭/倭.11052.wikitext
@@ -4,9 +4,12 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=22244|canj=OHDV|ids=⿰亻委}}
 
+====Derived characters====
+* {{l|mul|[[䔀]], [[𬕥]]}}
+
 ====References====
-* {{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D|ud=20525|bh=ADD8|bd=44504}}
-* Shuowen Jiezi: volume 15, page 46, character 18. http://kanji.zinbun.kyoto-u.ac.jp/db-machine/toho/html/A0200003.html
+{{Han ref|kx=0109.060|dkj=00796|dj=0232.040|hdz=10179.080|uh=502D}}
+* [http://kanji.zinbun.kyoto-u.ac.jp/db-machine/toho/html/A0200003.html Shuowen Jiezi: volume 15, page 46, character 18]
 
 ----
 
