--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -388,7 +388,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Finnish: {{t+|fi|sietää}}, {{t+|fi|kestää}}
 {{trans-mid}}
 * French: {{t+|fr|digérer}}
-* Italian: {{t+|it|digerire}}
+* Italian: {{t+|it|digerire}}, {{t+|it|sopportare}}
 * Portuguese: {{t+|pt|aturar}}
 {{trans-bottom}}
 
