--- a/en/偳/偳.11139.wikitext
+++ b/en/偳/偳.11139.wikitext
@@ -18,18 +18,7 @@
 ===Pronunciation===
 {{zh-pron
 |m=duān
-|m-s=
-|dg=
-|c=zeoi3
-|c-t=
-|g=
-|h=pfs=
-|j=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
+|c=zeoi3,dyun1
 |mc=y
 |oc=y
 |cat=
