--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -152,9 +152,9 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Latvian: {{t|lv|ķieģelis|m}}
 * Lezgi: {{t|lez|кирпич}}
 * Ligurian: {{t|lij|mun|m}}
-{{trans-mid}}
 * Limburgish: {{t+|li|brik|m}}, {{t+|li|brèk|m}}
 * Lingala: {{t|ln|biríki}}
+{{trans-mid}}
 * Lithuanian: {{t|lt|plyta|f}}
 * Low German: {{t|nds|Backsteen|m}}
 * Luxembourgish: {{t|lb|Zill|f}}
@@ -239,7 +239,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * White Hmong: {{t|mww|thwv cib}}
 * Yakut: {{t|sah|кирпииччэ}}
 * Yiddish: {{t|yi|ציגל|n|sc=Hebr}}
-* Zhuang: {{t-needed|za}}
+* Zhuang: {{t|za|cien}}
 * Zulu: {{t|zu|isitini|c7|c8}}
 {{trans-bottom}}
 
