--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -94,9 +94,9 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Cheyenne: {{t|chy|ma'o'honáá'e}}
 * Chichewa: {{t|ny|njerwa|c9|c10}}
 * Chinese:
-*: Cantonese: {{t|yue|磚塊|tr=zyun1 faai3}}, {{t|yue|磚頭|tr=zyun1 tau4}}
-*: Mandarin: {{t+|cmn|磚塊|sc=Hani}}, {{t+|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
-*: Min Nan: {{t|nan|磚頭|tr=chng-thâu}}
+*: Cantonese: {{t|yue|磚}}, {{t|yue|砖|tr=zyun1}}, {{t|yue|磚頭}}, {{t|yue|砖头|tr=zyun1 tau4}}
+*: Mandarin: {{t+|cmn|磚塊}}, {{t+|cmn|砖块|tr=zhuānkuài}}, {{t+|cmn|磚頭}}, {{t+|cmn|砖头|tr=zhuāntóu}}
+*: Min Nan: {{t|nan|磚仔}}, {{t|nan|砖仔|tr=chng-á}}
 * Chukchi: {{t|ckt|чеԓгыквын|tr=čelgykvyn}}
 * Chuvash: {{t|cv|кирпӗч}}
 * Coptic: {{t|cop|ⲧⲱⲃⲉ}}
