--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -7,7 +7,7 @@ From {{inh|en|enm|pleyen}}, {{m|enm|playen}}, {{m|enm|pleȝen}}, {{m|enm|plæien
 The noun is from {{inh|en|enm|pleye}}, from {{inh|en|ang|plæġ}}, {{m|ang|pleġa}}, {{m|ang|plæġa||play, quick motion, movement, exercise; (athletic) sport, game; festivity, drama; battle; gear for games, an implement for a game; clapping with the hands, applause}}, deverbative of {{m|ang|pleġian||to play}}; see above.
 
 ===Pronunciation===
-* {{enPR|plā}}, {{IPA|/pleɪ/|lang=en}}
+* {{enPR|plā}}, {{IPA|/pleɪ/|[pl̥eɪ]|lang=en}}
 * {{audio|en-us-play.ogg|Audio (US)|lang=en}}
 * {{rhymes|eɪ|lang=en}}
 
