--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia|dab=pull}}
 
 ===Etymology===
-From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian||to pull, draw, tug, pluck off}}. Related to {{cog|dum|pullen||to drink}}, {{cog|nds|pulen||to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla||to work hard, beat}}.
+From {{inh|en|enm|pullen}}, from {{inh|en|ang|pullian|t=to pull, draw, tug, pluck off}}. Related to {{cog|fy|pûlje|t=to shell, husk}}, {{cog|dum|pullen|t=to drink}}, {{cog|dum|polen|t=to peel, strip}}, {{cog|nds|pulen|t=to pick, pluck, pull, tear, strip off husks}}, {{cog|is|púla|t=to work hard, beat}}.
 
 ===Pronunciation===
 * {{enPR|po͝ol}}, {{IPA|/pʊl/|lang=en}}
