--- a/en/坍/坍.13008.wikitext
+++ b/en/坍/坍.13008.wikitext
@@ -12,12 +12,37 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=taan1}}
+===Pronunciation===
+{{zh-pron
+|m=tān
+|m-s=
+|dg=
+|c=taan1
+|c-t=
+|g=
+|h=pfs=
+|j=
+|mb=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=土04}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
+====Compounds====
+{{zh-der|坍臺|坍毀|坍落|崩坍|坍方|倒坍|坍壞|坍縮星|坍塌}}
 
 ----
 
@@ -29,7 +54,7 @@
 # {{defn|lang=ja|sort=土04}}
 
 ====Readings====
-* {{ja-readings|on=[[たん]] (tan), [[とん]] (ton)|kun=}}
+* {{ja-readings|on=たん,とん|kun=}}
 
 ----
 
@@ -39,15 +64,6 @@
 {{ko-hanja|hangeul=담|rv=dam|mr=tam}}
 
 # {{defn|lang=ko|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tān]] ([[tan1]])|wg=t'an<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
 
 ----
 
