--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -286,6 +286,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 ====Translations====
 {{trans-top|to make a noise like thunder}}
 * Arabic: {{t+|ar|رَعَدَ}}
+* Atayal: {{t|tay|mu’ bicyu}}
 * Breton: {{t-check|br|[[ober]] [[kurun]]}} <!-- was "[[ober]] [[kurun]]" - assumed sum-of-parts; if an idiom, drop [[links]] to [[words]]. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t-check|br|taranal}}, {{t-check|br|taraniñ}}
 * Catalan: {{t+|ca|tronar}}
 * Chinese:
