--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -140,6 +140,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Istriot: {{t|ist|truvà}}
 * Italian: {{t+|it|trovare}}, {{t+|it|scoprire}}, {{t+|it|rinvenire}}, {{t+|it|scovare}}, {{t+|it|reperire}}
 * Japanese: {{t|ja|見付ける|tr=みつける, mitsukeru|sc=Jpan}}
+* Kabuverdianu: {{t|kea|atxa}}
 * Kazakh: {{t+|kk|табу|sc=Cyrl}}
 * Khmer: {{t|km|រកឃើញ|tr=rɔɔk kʰəəñ|sc=Khmr}}
 * Korean: {{t+|ko|찾다}}
